# wordle-with-friends-backend

./: LICENSE  README.md  pyproject.toml
tests/: test_wordle_with_friends_backend.py
wordle_with_friends_backend/: data.py  hello.py  json_data.json  lib.py  main.py  socket_client.py
