[tool.poetry]
name = "wordle-with-friends-backend"
version = "0.1.0"
description = ""
authors = ["Daniel Thurau <daniel.n.thurau@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.3"
uuid = "^1.30"
mongoengine = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
